@@ -3,17 +3,16 @@ package com.trade.copy.binance.helper;
 import com.trade.copy.binance.config.BinanceHttpClient;
 import com.trade.copy.binance.config.BinanceProperties;
 import com.trade.copy.binance.util.SignatureUtil;
+import java.io.IOException;
 import java.net.URI;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.util.Map;
-import java.util.StringJoiner;
 import java.util.logging.Logger;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
-import org.springframework.util.StringUtils;
 import org.json.JSONObject;
 
 /**
@@ -29,38 +28,36 @@ public class BinanceApiHelper {
 	private final BinanceProperties binanceProperties;
 	private final BinanceHttpClient httpClient;
 
-	/**
-	 * 서버 시간 조회
-	 */
-	private long getFuturesServerTime() throws Exception {
+	// 서버와의 시간 차이(offset), 최초 1회 계산
+	private Long timeOffset = null;
+
+	private long getServerTime() {
 		String url = binanceProperties.getBaseUrl() + "/fapi/v1/time";
 		HttpRequest req = HttpRequest.newBuilder()
 			  .uri(URI.create(url))
 			  .GET()
 			  .build();
 
-		HttpResponse<String> res = httpClient.client.send(req, HttpResponse.BodyHandlers.ofString());
-		if (res.statusCode() != 200) {
-			throw new RuntimeException("서버 시간 조회 실패: " + res.body());
+		try {
+			HttpResponse<String> res = httpClient.client.send(req, HttpResponse.BodyHandlers.ofString());
+
+			if (res.statusCode() != 200) {
+				throw new RuntimeException("서버 시간 조회 실패: " + res.body());
+			}
+
+			return new JSONObject(res.body()).getLong("serverTime");
+		} catch (IOException | InterruptedException e) {
+			throw new RuntimeException(e);
 		}
-		JSONObject obj = new JSONObject(res.body());
-		return obj.getLong("serverTime");
 	}
 
-	/**
-	 * Map<String, String> 형태의 파라미터를 쿼리 문자열로 변환
-	 */
-	private String buildQueryString(Map<String, String> params) {
-		if (params == null || params.isEmpty()) {
-			return "";
+	private long getAdjustedTimestamp() {
+		if (timeOffset == null) {
+			long serverTime = getServerTime();
+			timeOffset = serverTime - System.currentTimeMillis();
+			logger.info("📡 Binance 시간 offset: " + timeOffset + "ms");
 		}
-		StringJoiner joiner = new StringJoiner("&");
-		params.forEach((k, v) -> {
-			if (StringUtils.hasText(v)) {
-				joiner.add(k + "=" + v);
-			}
-		});
-		return joiner.toString();
+		return System.currentTimeMillis() + timeOffset;
 	}
 
 	/**
@@ -70,11 +67,10 @@ public class BinanceApiHelper {
 	 * @return response body (String)
 	 */
 	public String sendGetRequest(String path, Map<String, String> extraParams) throws Exception {
-		long serverTime = getFuturesServerTime();
 		MultiValueMap<String, String> allParams = new LinkedMultiValueMap<>();
 
 		// 1) 서버 시간 + recvWindow
-		allParams.add("timestamp", String.valueOf(serverTime));
+		allParams.add("timestamp", String.valueOf(getAdjustedTimestamp()));
 		allParams.add("recvWindow", String.valueOf(binanceProperties.getRecvWindow()));
 
 		// 2) 추가 파라미터
@@ -104,7 +100,6 @@ public class BinanceApiHelper {
 			  .build();
 
 		HttpResponse<String> response = httpClient.client.send(request, HttpResponse.BodyHandlers.ofString());
-		logger.info("▶ GET " + path + " 응답 코드 = " + response.statusCode());
 
 		if (response.statusCode() != 200) {
 			throw new RuntimeException("Binance API Error (GET " + path + "): "
@@ -117,10 +112,9 @@ public class BinanceApiHelper {
 	 * 공통 DELETE 요청
 	 */
 	public String sendDeleteRequest(String path, Map<String, String> extraParams) throws Exception {
-		long serverTime = getFuturesServerTime();
 		MultiValueMap<String, String> allParams = new LinkedMultiValueMap<>();
 
-		allParams.add("timestamp", String.valueOf(serverTime));
+		allParams.add("timestamp", String.valueOf(getAdjustedTimestamp()));
 		allParams.add("recvWindow", String.valueOf(binanceProperties.getRecvWindow()));
 		if (extraParams != null) {
 			extraParams.forEach((k, v) -> {
@@ -145,7 +139,6 @@ public class BinanceApiHelper {
 			  .build();
 
 		HttpResponse<String> response = httpClient.client.send(request, HttpResponse.BodyHandlers.ofString());
-		logger.info("▶ DELETE " + path + " 응답 코드 = " + response.statusCode());
 
 		if (response.statusCode() != 200) {
 			throw new RuntimeException("Binance API Error (DELETE " + path + "): "
@@ -157,11 +150,10 @@ public class BinanceApiHelper {
 	/**
 	 * 공통 POST 요청 (바디 없이 query string으로만 파라미터 전달)
 	 */
-	public String sendPostRequest(String path, Map<String, String> extraParams) throws Exception {
-		long serverTime = getFuturesServerTime();
+	public String sendPostRequest(String path, Map<String, String> extraParams) {
 		MultiValueMap<String, String> allParams = new LinkedMultiValueMap<>();
 
-		allParams.add("timestamp", String.valueOf(serverTime));
+		allParams.add("timestamp", String.valueOf(getAdjustedTimestamp()));
 		allParams.add("recvWindow", String.valueOf(binanceProperties.getRecvWindow()));
 		if (extraParams != null) {
 			extraParams.forEach((k, v) -> {
@@ -172,11 +164,16 @@ public class BinanceApiHelper {
 		}
 
 		String queryString = allParams.entrySet().stream()
-			  .map(e -> e.getKey() + "=" + e.getValue().get(0))
+			  .map(e -> e.getKey() + "=" + e.getValue().getFirst())
 			  .reduce((a, b) -> a + "&" + b)
 			  .orElse("");
 
-		String signature = SignatureUtil.generate(queryString, binanceProperties.getSecret());
+		String signature;
+		try {
+			signature = SignatureUtil.generate(queryString, binanceProperties.getSecret());
+		} catch (Exception e) {
+			throw new RuntimeException(e);
+		}
 		String fullUrl = binanceProperties.getBaseUrl() + path + "?" + queryString + "&signature=" + signature;
 
 		HttpRequest request = HttpRequest.newBuilder()
@@ -185,8 +182,12 @@ public class BinanceApiHelper {
 			  .POST(HttpRequest.BodyPublishers.noBody())
 			  .build();
 
-		HttpResponse<String> response = httpClient.client.send(request, HttpResponse.BodyHandlers.ofString());
-		logger.info("▶ POST " + path + " 응답 코드 = " + response.statusCode());
+		HttpResponse<String> response;
+		try {
+			response = httpClient.client.send(request, HttpResponse.BodyHandlers.ofString());
+		} catch (IOException | InterruptedException e) {
+			throw new RuntimeException(e);
+		}
 
 		if (response.statusCode() != 200) {
 			throw new RuntimeException("Binance API Error (POST " + path + "): "
